feat: finish html and css

--- a/index.html
+++ b/index.html
@@ -1,85 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Odin Landing Page</title>
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  <header>
-    <div>
-      <div>Header Logo</div>
+  <head>
+    <meta charset="UTF-8">
+    <title>Odin Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    <header>
       <nav>
+        <h3>Header Logo</h3>
         <ul>
           <li>header link one</li>
           <li>header link two</li>
           <li>header link three</li>
         </ul>
       </nav>
-    </div>
-    <div>
-      <div>
-        <div>This website is awesome</div>
+      <section>
+        <aside>
+          <h1>This website is awesome</h1>
+          <p>
+            This website has some subtext that goes here under the main
+            title. It's smaller in font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </aside>
+        <article>
+          <p>
+            this is a placeholder for an image
+          </p>
+        </article>
+      </section>
+    </header>
+    <main>
+      <section id="boxes">
+        <h2>Some random information.</h2>
+        <article>
+          <aside>
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </aside>
+          <aside>
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </aside>
+          <aside>
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </aside>
+          <aside>
+            <div class="box"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </aside>
+        </article>
+      </section>
+      <section id="quote">
+        <p>
+          This is an inspiring quote, or a testimonial from a customer. 
+          Maybe it's just filling up space, or maybe people will actually 
+          read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p>-Thor, God of Thunder</p>
+      </section>
+      <section id="signup">
         <div>
-          This website has some subtext that goes here under the
-          main title. It's a smaller font and the color is lower
-          contrast.
+          <aside>
+            <p>Call to action! It's time!</p>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </aside>
+          <aside>
+            <button>Sign up</button>
+          </aside>
         </div>
-        <button>Sign up</button>
-      </div>
-      <div>this is a placeholder for an image</div>
-    </div>
-  </header>
-  <main>
-    <div>
-      <div>Some random information</div>
-      <div>
-        <div>
-          <div class="rounded box"></div>
-          <div>
-            this is some subtext under an illustration or an image
-          </div>
-        </div>
-        <div>
-          <div class="rounded box"></div>
-          <div>
-            this is some subtext under an illustration or an image
-          </div>
-        </div>
-        <div>
-          <div class="rounded box"></div>
-          <div>
-            this is some subtext under an illustration or an image
-          </div>
-        </div>
-        <div>
-          <div class="rounded box"></div>
-          <div>
-            this is some subtext under an illustration or an image
-          </div>
-        </div>
-      </div>
-    </div>
-    <div>
-      <div>
-        This is an inspiring quote or a testimonial from a customer.
-        Maybe it's just filling up space, or maybe people will
-        actually read it. Who knows? All I know is that it looks nice. <br />
-      <span>- Thor, God of Thunder</span>
-      </div>
-    </div>
-    <div>
-      <div class="rounded box">
-        <div>
-          <div>Call to action! It's time!</div>
-          <div>
-            Sign up for our product by clicking that button right over there!
-          </div>
-        </div>
-        <button>Sign up</button>
-      </div>
-    </div>
-  </main>
-  <footer>Copyright © TheOdinProject 2021</footer>
-</body>
+      </section>
+    </main>
+    <footer>Copyright © TheOdinProject 2021</footer>
+  </body>
 </html>
